# mealplanner

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-template.yml
.github/workflows/: move-assigned-to-ready.yml
backend/: main.py
backend/api/: api.py  data_processing.py  groceries.py
backend/core/: db.py
backend/models/: grocery.py
dlt/: resources.py
frontend/: app.py  dashboard.py  utils.py
frontend/pages/: 1_Home.py  2_My_Recipes.py  3_Meal_Planning.py  5_Preferences.py  6_Dietary_Restrictions.py
helpers/: dataframe_helpers.py  test.ipynb  test.py
ingestion/: pipeline.py  resources.py
mealplanner_dbt/: .user.yml  dbt_project.yml  profiles.yml
mealplanner_dbt/models/01_staging/: sources.yml  stg_classification.sql  stg_component.sql  stg_grocery.sql  stg_ingredient.sql  stg_nutrient.sql
mealplanner_dbt/models/03_mart/: mart_grocery_nutrients.sql
mealplanner_dbt/models/dim/: dim_classification.sql  dim_component.sql  dim_grocery.sql  dim_ingredient.sql  dim_nutrient.sql
mealplanner_dbt/models/fct/: fct_grocery_classification.sql  fct_grocery_component.sql  fct_grocery_ingredient.sql  fct_grocery_nutrient.sql
mealplanner_dbt/models/staging/: sources.yml  stg_classification.sql  stg_classifications.sql  stg_component.sql  stg_groceries.sql  stg_grocery.sql  stg_ingredient.sql  stg_ingredients.sql  stg_material.sql  (+3 more)
pages/: 1_Grocery_Search.py  4_Members.py
ui/: styles.css
ui/main/: components.py
ui/sidebar/: components.py
(+25 files in other folders)
