[project]
name = "mealplanner"
version = "0.1.0"
description = "Mealplanning app in development"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.9.6",
    "dlt>=1.17.0",
    "duckdb>=1.4.0",
    "fastapi>=0.117.1",
    "plotly-express>=0.4.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
